--- a/admin/email-scheduler.html
+++ b/admin/email-scheduler.html
@@ -76,6 +76,37 @@ require_admin();
         <h2>Email Logs</h2>
         <div id="logs-list">Loading logs...</div>
     </div>
+
+    <!-- Edit Campaign Modal -->
+    <div id="edit-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Edit Campaign</h2>
+                <button class="close-modal" onclick="closeModal()">&times;</button>
+            </div>
+            <div id="edit-campaign-content">
+                <form id="edit-form">
+                    <input type="hidden" name="id">
+                    <div class="form-group"><label>Campaign Name</label><input name="name" required></div>
+                    <div class="form-group"><label>Email Subject</label><input name="subject" required></div>
+                    <div class="form-group"><label>Email Body</label><textarea name="body" required></textarea></div>
+                    <div class="form-group"><label>Recipients (one per line)</label><textarea name="recipients" required></textarea></div>
+                    <div class="form-group"><label>Send on Days</label><div class="checkbox-group">
+                        <label><input type="checkbox" name="days" value="monday"> Monday</label>
+                        <label><input type="checkbox" name="days" value="tuesday"> Tuesday</label>
+                        <label><input type="checkbox" name="days" value="wednesday"> Wednesday</label>
+                        <label><input type="checkbox" name="days" value="thursday"> Thursday</label>
+                        <label><input type="checkbox" name="days" value="friday"> Friday</label>
+                        <label><input type="checkbox" name="days" value="saturday"> Saturday</label>
+                        <label><input type="checkbox" name="days" value="sunday"> Sunday</label>
+                    </div></div>
+                    <div class="form-group"><label>Send Time</label><input type="time" name="send_time" required></div>
+                    <div class="form-group"><label><input type="checkbox" name="active"> Active</label></div>
+                    <div style="display:flex;gap:8px"><button class="btn btn-primary" type="submit">Save Changes</button><button type="button" class="btn btn-danger" id="delete-btn">Delete</button></div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -97,11 +128,77 @@ function loadCampaigns(){
         if (!j.campaigns || j.campaigns.length===0) { list.innerHTML = '<p>No campaigns</p>'; return; }
         j.campaigns.forEach(c=>{
             const el = document.createElement('div'); el.className='campaign-card';
-            el.innerHTML = `<h3>${escapeHtml(c.name)}</h3><div class="campaign-meta">${c.created_at} • ${c.recipients.length} recipients</div>`;
+            el.innerHTML = `
+                <h3>${escapeHtml(c.name)}</h3>
+                <div class="campaign-meta">${c.created_at} • ${c.recipients.length} recipients</div>
+                <div class="campaign-actions">
+                    <button class="btn btn-primary" data-id="${c.id}" onclick="openEdit(${c.id})">Edit</button>
+                    <button class="btn btn-secondary" data-id="${c.id}" onclick="triggerSend(${c.id})">Send Now</button>
+                    <button class="btn btn-danger" data-id="${c.id}" onclick="deleteCampaign(${c.id})">Delete</button>
+                </div>
+            `;
             list.appendChild(el);
         });
     }).catch(err=>console.error(err));
 }
+
+function openEdit(id){
+    fetchJSON(API_URL + '?action=campaign&id=' + encodeURIComponent(id)).then(j=>{
+        if (!j.campaign) { alert('Campaign not found'); return; }
+        const c = j.campaign;
+        const form = document.getElementById('edit-form');
+        form.id.value = c.id;
+        form.name.value = c.name;
+        form.subject.value = c.subject;
+        form.body.value = c.body;
+        form.recipients.value = (c.recipients || []).join('\n');
+        form.send_time.value = c.send_time;
+        form.active.checked = !!c.active;
+        // set days
+        form.querySelectorAll('input[name="days"]').forEach(i=>i.checked = (c.send_days || []).includes(i.value));
+        document.getElementById('edit-modal').classList.add('active');
+    });
+}
+
+function closeModal(){ document.getElementById('edit-modal').classList.remove('active'); }
+
+document.getElementById('edit-form').addEventListener('submit', function(e){
+    e.preventDefault(); const fd = new FormData(e.target); const payload = {
+        name: fd.get('name'), subject: fd.get('subject'), body: fd.get('body'),
+        recipients: fd.get('recipients'), send_time: fd.get('send_time'), active: fd.get('active') ? 1 : 0,
+        send_days: Array.from(e.target.querySelectorAll('input[name="days"]:checked')).map(i=>i.value)
+    };
+    const id = fd.get('id');
+    fetch(API_URL + '?action=campaign&id=' + encodeURIComponent(id), { method:'PUT', headers:{ 'Content-Type':'application/json', 'X-CSRF-Token': '<?php echo htmlspecialchars(generate_csrf_token(), ENT_QUOTES); ?>' }, body: JSON.stringify(payload) })
+    .then(r=>r.json()).then(j=>{ alert(j.message || JSON.stringify(j)); closeModal(); loadCampaigns(); });
+});
+
+function deleteCampaign(id){
+    if (!confirm('Delete campaign #' + id + '?')) return;
+    fetch(API_URL + '?action=campaign&id=' + encodeURIComponent(id), { method:'DELETE', headers: { 'X-CSRF-Token': '<?php echo htmlspecialchars(generate_csrf_token(), ENT_QUOTES); ?>' } })
+    .then(r=>r.json()).then(j=>{ alert(j.message || JSON.stringify(j)); loadCampaigns(); });
+}
+
+function triggerSend(id){
+    fetch(API_URL + '?action=send', { method:'POST', headers:{ 'Content-Type':'application/json', 'X-CSRF-Token': '<?php echo htmlspecialchars(generate_csrf_token(), ENT_QUOTES); ?>' }, body: JSON.stringify({ campaign_id: id }) })
+    .then(r=>r.json()).then(j=>{ alert(j.message || JSON.stringify(j)); });
+}
+
+// Load logs
+function loadLogs(){
+    fetchJSON(API_URL + '?action=logs').then(j=>{
+        const el = document.getElementById('logs-list'); el.innerHTML = '';
+        if (!j.logs || j.logs.length===0) { el.innerHTML = '<p>No logs</p>'; return; }
+        j.logs.forEach(l=>{
+            const d = document.createElement('div'); d.className='campaign-card';
+            d.innerHTML = `<div><strong>${escapeHtml(l.status)}</strong> ${l.sent_at} - Campaign #${l.campaign_id || 'n/a'}<div>${escapeHtml(l.message)}</div></div>`;
+            el.appendChild(d);
+        });
+    });
+}
+
+// Hook log tab to load logs when clicked
+document.querySelector('[data-target="logs"]').addEventListener('click', ()=>setTimeout(loadLogs, 200));
 
 function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":"&#39;" })[c]); }
 
