--- a/admin/email-scheduler.html
+++ b/admin/email-scheduler.html
@@ -1,30 +1,14 @@
-<?php
-require_once __DIR__ . '/config.php';
-require_admin();
-?>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Email Scheduler - Admin</title>
-    <link rel="stylesheet" href="/assets/css/admin.css">
-    <style>
-        /* Inline critical styles from package to keep page self-contained */
-        body { font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial; background:#f5f7fa; color:#333; }
-        .container{max-width:1100px;margin:20px auto;padding:20px}
-        .tabs{display:flex;gap:8px;margin-bottom:16px}
-        .tab{padding:8px 12px;background:#fff;border-radius:6px;cursor:pointer}
-        .tab.active{background:#3498db;color:#fff}
-        .tab-content{display:none;background:#fff;padding:16px;border-radius:8px}
-        .tab-content.active{display:block}
-    </style>
-</head>
-<body>
-<?php include __DIR__ . '/_admin_header.php'; // optional project-specific header (may not exist) ?>
-<div class="container">
-    <h1>Email Scheduler Admin</h1>
-    <p>Manage automated email campaigns</p>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="refresh" content="0; url=email-scheduler.php">
+        <title>Redirecting...</title>
+    </head>
+    <body>
+        <p>Redirecting to <a href="email-scheduler.php">Email Scheduler (PHP)</a>…</p>
+    </body>
+</html>
 
     <div class="tabs">
         <button class="tab active" data-target="campaigns">Campaigns</button>
